# remote-protocol-control

./: .gitignore  LICENSE  README.md
core/include/: rpc.h  rpc_config.h  rpc_crc8.h  rpc_errors.h  rpc_link.h  rpc_log.h  rpc_osal.h  rpc_phy.h  rpc_transport.h  rpc_types.h
core/src/: rpc.c  rpc_crc8.c  rpc_link.c  rpc_transport.c
docs/: Implementation.docx
examples/: CMakeLists.txt  ping_pong.c
platform/linux/: rpc_osal_linux.c  rpc_phy_linux.c
